<resources>
    <string name="app_name">RailwayProjectApoorva</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="quota_exhausted">Quota exhausted for the day</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string-array name="classes_availability_items_array">
        <item>First Class</item>
        <item>Sleeper class</item>
        <item>Table</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not yet Reegistered? Get registered in RailwayEnquiry now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string-array name="classes_entry">
        <item>Sleeper</item>
        <item>General</item>
        <item>AC</item>
    </string-array>
    <string name="title_0">Sunday</string>
    <string name="title_1">Monday</string>
    <string name="title_2">Tuesday</string>
    <string name="title_3">Wednesday</string>
    <string name="title_4">Thrusday</string>
    <string name="title_5">Friday</string>
    <string name="title_6">Saturday</string>
    <string name="text_1">Available</string>
    <string name="text_2"> Not Available</string>
    <string name="please_select_hour_value">please select hour value</string>
    <string name="please_select_value_multiple">please select hour value multiple of 2</string>
    <string name="fill_all_the_fields">Please fill all the fields!!</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="add_hour">Add Hour</string>
    <string name="string_cancel">cancel</string>
    <string name="exit">exit</string>
    <string-array name="spinner">
        <item>select class</item>
        <item>GN</item>
        <item>TQ</item>
        <item>PT</item>
        <item>LD</item>
        <item>PQ</item>
        <item>RC</item>
        <item>SS</item>
    </string-array>
    <string name="form_login_title">Sign In</string>
    <string name="form_create_account">Create Account</string>
    <string name="form_username">Username</string>
    <string name="available_leaves">Available Leaves</string>
    <string name="form_password">Password</string>
    <string name="form_forgot_password_link">I forgot username or password</string>
    <string name="form_sign_in_licence">By tapping sign in you agree to our</string>
    <string name="form_sign_in_button">SIGN IN</string>
    <string name="form_terms_condition">Terms and Conditions</string>
    <string name="error_check_network">Please check your network</string>
    <string name="error_fill_all_field">Please fill all the fields</string>
    <string name="progress_sign_in">Please wait while we sign you in</string>
    <string name="progress_change_password">Please wait...</string>
    <string name="progress_sign_in_title">Sign In</string>
    <string name="selectDate">Select Date</string>
    <string name="not_applicable">NA</string>
    <string name="forgot_credentials_title">Reset Password</string>
    <string name="forgot_credentials_note">To reset your password, type the email address you use to login to WELORG application</string>
    <string name="ok">Ok</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="selectFromDate">Select From Date</string>
    <string name="selectToDate">Select To Date</string>
    <string name="enter_reason_first">Please enter reason</string>
    <string name="select_to_date">Select To Date</string>
    <string name="select_from_date">Select From Date</string>
    <string name="fromDate_should_not_be_greater_than_toDate">FromDate should be less than ToDate</string>
    <string name="no_compoffs">You do not have any earlier comp off</string>
    <string name="upload_failed">Falied to add comp-off. Please try again</string>
    <string name="comp_off_added">Your comp off request is send to Authority for Approval</string>
    <string name="please_wait">Please Wait..</string>
    <string name="adding_new_compoff">Adding new Comp-Off</string>
    <string name="list_up_to_date">List upto date</string>
    <string name="name">Name:</string>
    <string name="enrollment_number">Employee Code</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reason">Reason</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="date_of_resign">Resign Date</string>
    <string name="set_resignation_date_here">set resignation date here</string>
    <string name="select_resign_date">select resign date first</string>
    <string name="write_resign_reason">write resign reason</string>
    <string name="resignation_applied">Resignation Applied</string>
    <string name="resignation_failed">Failed to send resignation</string>
    <string name="sending_resignation">Sending Resignation</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_in_progress">Save In Progress</string>
    <string name="data_saved">Data Saved</string>
    <string name="enter_your_declaration">Enter your declaration</string>
    <string name="for_month">For Month</string>
    <string name="approved">Approved</string>
    <string name="declared_by_employee">Declared By Employee</string>
    <string name="rent_limit">Rent Limit</string>
    <string name="perticulars">Particulars</string>
    <string name="details">Details</string>
    <string name="limit">Limit</string>
    <string name="exemption_category">Exemptiion Category</string>
    <string name="exemption_limit">Exemption Limit</string>
    <string name="group">Group</string>
    <string name="deduction_under_vi_a">Deduction Under VI-A</string>
    <string name="exemption_under_sec_10">Exemption Under Sec 10</string>
    <string name="other_income">Other Income</string>
    <string name="previous_it_details">Previous IT Details</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_department">Department</string>
    <string name="employee_designation">Designation</string>
    <string name="employee_date_of_joining">Date of Joining</string>
    <string name="resignation_form">Resignation</string>
    <string name="employee_date_of_resign">Date of Resign</string>
    <string name="send_resignation">Send Resignation</string>
    <string name="current_status">Current Status</string>
    <string name="date_of_apply">Date of Apply</string>
    <string name="add_comp_off">Apply For Comp-Off</string>
    <string name="desc_rate_this_app">Rate this app</string>
    <string name="desc_github_link">Github link</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="apply_for_expense_title">Apply Reimbursement</string>
    <string name="view_expense_link">View expense</string>
    <string name="form_apply_button">Apply</string>
    <string name="form_expense_type">Expense Type</string>
    <string name="form_expense_figure">Expense Figure(Rs/-)</string>
    <string name="form_expense_from_date">From Date</string>
    <string name="form_expense_to_date">To Date</string>
    <string name="form_expense_ref_bill_no">Ref Bill No</string>
    <string name="form_expense_remark">Remark</string>
    <string name="form_expense_choose_file">Browse</string>
    <string name="form_expense_attachment">Attachment</string>
    <string name="form_expense_attach_type">You can upload file in .jpg, .jpeg, .png , .pdf format</string>
    <string name="form_expense_no_file_chosen">No file chosen</string>
    <string name="view_expense_toolbar_title">View Your Expense</string>
    <string name="view_expense_claim_date">Claim Date</string>
    <string name="view_expense_claim_to">Claim To</string>
    <string name="view_expense_description">Description</string>
    <string name="view_expense_file_attached">File Attached</string>
    <string name="view_expense_status">Status</string>
    <string name="view_expense_amount">Amount</string>
    <string name="emp_leave_mngmnt_employee_name">Employee Name</string>
    <string name="emp_leave_mngmnt_apply_date">Apply Date</string>
    <string name="emp_leave_mngmnt_leave_from">Leave From</string>
    <string name="emp_leave_mngmnt_leave_upto">Leave Upto</string>
    <string name="emp_leave_mngmnt_reason">Reason</string>
    <string name="emp_leave_mngmnt_leave_type">Leave Type</string>
    <string name="leave_status">Leave Status</string>
    <string name="view_your_expenses"> Your Expenses</string>
    <string name="applied_successfully">Applied successfully</string>
    <string name="applying_failure">Failure..reimbursement not applied</string>
    <string name="could_not_read">Could not completely read file</string>
    <string name="leave_approved">APPROVED</string>
    <string name="leave_rejected">REJECTED</string>
    <string name="leave_pending">PENDING</string>
    <string name="emp_leave_management_title">Employee Leave Management</string>
    <string name="approval_title">Approval</string>
    <string name="emp_leave_record_title">Your Log</string>
    <string name="emp_leave_rejected">Leave Rejected Successfully</string>
    <string name="emp_leave_approved">Leave Approved Successfully</string>
    <string name="approve_leave">Approve</string>
    <string name="reject_leave">Reject</string>
    <string name="flag_fill_pending">L_PENDING</string>
    <string name="flag_fill_reject">L_REJECT</string>
    <string name="flag_fill_approved">L_APPROVE</string>
    <string name="flag_approve_leave">APPROVE_LEAVE</string>
    <string name="flag_reject_leave">REJECT_LEAVE</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="file_too_large">File is too large</string>
    <string name="select_type_and_status">Please select type and desired status</string>
    <string name="report_leave_name">Leave Name</string>
</resources>